fixed gap on the right of the whole website

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -18,12 +18,11 @@
   grid-column: 2/4;
   border-style: solid white;
   border-radius: 25px;
-  margin: 10px;
+  margin: 10px auto;
   background-color: rgba(241, 159, 77, 0.8);
   padding: 15px;
   text-align: center;
   width: 75%;
-  margin-left: 200px;
   a:hover {
     color: #404040 !important;
     font-weight: 700 !important;
